# wc-clone

./: Cargo.toml  README.md
src/: main.rs
